--- a/pabutools/visualisation/templates/mes_round_analysis_template.html
+++ b/pabutools/visualisation/templates/mes_round_analysis_template.html
@@ -55,6 +55,11 @@
         .chord-wrapper {
             height: 100%;
         }
+
+        .sankey-wrapper {
+            height: 100%;
+            padding-top: 80px;
+        }
         
         #myChordChart {
             height: 100%;
@@ -92,6 +97,52 @@
             margin-top: 25px;
             /* padding-top: 100px; */
         }
+
+        .text-container {
+            max-height: 50px;
+            overflow: hidden;
+            }
+
+            .text-expanded {
+            max-height: none;
+            }
+
+        #toggleButton {
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            padding: 5px 15px; /* Smaller padding */
+            font-size: 14px; /* Smaller font size */
+        }
+
+        #toggleButton:hover {
+            background-color: #0056b3; 
+        }
+
+        #toggleButtonChord {
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            padding: 5px 15px; /* Smaller padding */
+            font-size: 14px; /* Smaller font size */
+        }
+
+        #toggleButtonChord:hover {
+            background-color: #0056b3; 
+        }
+
+        .button-container {
+            display: flex;
+            justify-content: center; /* Center horizontally */
+            align-items: center; /* Center vertically if needed */
+            margin-top: 10px; /* Add space between the text and the button */
+            }
     </style>
     <script>
     window.addEventListener('load', (event) => {
@@ -145,7 +196,6 @@
                         <p>
                             This is the round-by-round explanations for the results of this participatory budgeting election decided by the Method of Equal Shares (MES). For each round,
                             we provide visualisations to help you understand why each particular project was selected or not. The visualisations include effective vote counts, voter flows, and pie charts.
-                            If you hover over the 'i' buttons, you will see more detailed explanations of each visualisation.
                         </p>
                     </div>
                 </div>
@@ -222,7 +272,7 @@
                         </div>
                         <div class="col-7" style="min-height: 400px;">
                             <div id="BarChart" style="height: 100%; width: 100%;">
-                                <button class = "info-button" style = "position: absolute; z-index: 5; right: 50px;" data-tippy-content= "<b>Effective Vote Count:</b><br> For a vote to count towards a project, the person who made the vote must have some of their budget remaining so they can contribute towards the project. Say Project A has 20 voters, but 5 of those 20 have already spent their entire budget on previous projects, the effective vote count will be 15. This graph shows the effective vote counts for all projects.">i</button>
+                                <!-- <button class = "info-button" style = "position: absolute; z-index: 5; right: 50px;" data-tippy-content= "<b>Effective Vote Count:</b><br> For a vote to count towards a project, the person who made the vote must have some of their budget remaining so they can contribute towards the project. Say Project A has 20 voters, but 5 of those 20 have already spent their entire budget on previous projects, the effective vote count will be 15. This graph shows the effective vote counts for all projects.">i</button> -->
                             </div>
                         </div>
                     </div>
@@ -237,20 +287,32 @@
                         <p>The following graphs demonstrate how voters of '<span class="project_name"></span>' voted for other projects, highlighting where funding may be lost for certain projects in future rounds as voters funds have been allocated to '<span class="project_name"></span>'. </p>
                     </div>
                     <div class="row">
-                        <div class="col-5" style="display: grid;">
+                        <div class="col-5 sankey-wrapper">
                             <div class="d-flex align-items-center justify-content-center">
-                                <button class = "info-button" style = "position: absolute; z-index: 5; left: 10px; top: 30px" data-tippy-content="<b>Sankey Diagram</b><br>The provided Sankey diagram offers a visual representation of voting patterns among a set of participants with the option to vote for multiple projects. The individual bands flowing from this singular left bar to various bars on the right-hand side illustrate the distribution of voters who have also voted for other projects. Each band's thickness corresponds to the number of voters who voted for both the project on the left and the project on the right. The graph is designed to show the overlap in voting behaviour, making it clear which projects share a common voter base with the project displayed on the right-hand side.">i</button>
                                 <div id="SankeyChart">
-
                                 </div>
                             </div>
+                            <div id="textContainer" class="text-container">
+                                <p id="text" class="text">
+                                    The provided Sankey diagram offers a visual representation of voting patterns among a set of participants with the option to vote for multiple projects. The individual bands flowing from this singular left bar to various bars on the right-hand side illustrate the distribution of voters who have also voted for other projects. Each band's thickness corresponds to the number of voters who voted for both the project on the left and the project on the right. The graph is designed to show the overlap in voting behaviour, making it clear which projects share a common voter base with the project displayed on the right-hand side.
+                                </p>
+                            </div>
+                            <div class="button-container">
+                                <button id="toggleButton" onclick="toggleText()">Show More</button>
+                              </div>
                         </div>
 
                         <div class="col-2"></div>
                         <div class="col-5 chord-wrapper">
-                            <button class = "info-button" style = "position: absolute; z-index: 5; right: 10px; top: 30px" data-tippy-content="<b>Chord Diagram:</b><br> The chord diagram shows the voter flows between the project selected this round. Due to the nature of MES, if a project is selected, the voters who voted for it will have a reduction in their budget. Therefore, showing how voters’ voted shows which other projects will have had their support cut.">i</button>
                             <div id='ChordChart'></div>
-
+                            <div id="textContainerChord" class="text-container">
+                                <p id="text" class="text">
+                                    The chord diagram shows the voter flows between the project selected this round. Due to the nature of MES, if a project is selected, the voters who voted for it will have a reduction in their budget. Therefore, showing how voters’ voted shows which other projects will have had their support cut.
+                                </p>
+                            </div>
+                            <div class="button-container">
+                                <button id="toggleButtonChord" onclick="toggleTextChord()">Show More</button>
+                              </div>
                         </div>
                     </div>
                     <div class="spacer-1"></div>
@@ -262,7 +324,6 @@
                     </div> 
                     <!-- Pie Charts Carousels -->
                     <div id="secondCarousel" style="height: 500px; width: 100%;" class="carousel slide" data-ride="carousel" data-interval="false">
-                        <button class = "info-button" style = "position: absolute; z-index: 5; right: 30px; top: 30px" data-tippy-content="<b>Pie Chart:</b><br> TODO">i</button>
                         
                         <div id="pieChartsCarousel" class="carousel-inner" style="height: 500px; width: 100%; padding: 0px" >
                         </div>
@@ -291,7 +352,7 @@
                         </div>
                         <div class="col-7" style="min-height: 400px;">
                             <div id="StackedBarChart" style="height: 100%; width: 100%;" >
-                                <button class = "info-button" style = "position: absolute; z-index: 5; right: 50px;" data-tippy-content= "<b>Reduced Effective Vote Count</b><br>Voters who still have money left but not enough money to pay for the project when its cost is equally divided will count as a fraction. We do not count voters if they have already spent their entire budget share.">i</button>
+                                <!-- <button class = "info-button" style = "position: absolute; z-index: 5; right: 50px;" data-tippy-content= "<b>Reduced Effective Vote Count</b><br>Voters who still have money left but not enough money to pay for the project when its cost is equally divided will count as a fraction. We do not count voters if they have already spent their entire budget share.">i</button> -->
                             </div>
                         </div>
                     </div>
@@ -513,7 +574,7 @@
                 "title": {
                     "text": "Effective Vote Count",
                 "fontSize": 16, // Smaller font size to ensure it fits
-                "adjustLayout": true // ZingChart will try to adjust the layout 
+                // "adjustLayout": true // ZingChart will try to adjust the layout 
                 },
                 "plotarea": {
                 "marginLeft":'dynamic',
@@ -577,24 +638,6 @@
         }
 
         function updateStackedBarChart(x_labels, initial_values, reduced_values) {
-            // let args = {
-            //     "data":{
-            //     "scale-x":{
-            //         "labels": x_labels,
-            //     },
-            //     "series":[
-            //         {
-            //             "text": "Current Votes",
-            //             "values": initial_values,
-            //         },
-            //         {
-            //             "text": "Previous Votes",
-            //             "values": reduced_values
-            //         }
-            //     ]
-            //     }
-            // };
-            // zingchart.exec('StackedBarChart', 'modify', args);   
 
             zingchart.render({
                 id: 'StackedBarChart',
@@ -885,7 +928,8 @@
     </script>
     <script>
         async function loadRound() {
-            roundNum = 0
+            roundNum = 0;
+
             const urlParams = new URLSearchParams(window.location.search);
             projectId = urlParams.get('projectId');
             if (projectId === null) {
@@ -901,6 +945,36 @@
             // Display the dropdown
             document.getElementById("dropdown-container").classList.add('active');
             document.getElementById("dropdown-container").style.display = 'flex';
+        }
+
+        function toggleText() {
+            var container = document.getElementById("textContainer");
+            var button = document.getElementById("toggleButton");
+
+            if (container.classList.contains("text-expanded")) {
+                // If the text is expanded, collapse it
+                container.classList.remove("text-expanded");
+                button.innerHTML = "Show More";
+            } else {
+                // If the text is collapsed, expand it
+                container.classList.add("text-expanded");
+                button.innerHTML = "Show Less";
+            }
+        }
+
+        function toggleTextChord() {
+            var container = document.getElementById("textContainerChord");
+            var button = document.getElementById("toggleButtonChord");
+
+            if (container.classList.contains("text-expanded")) {
+                // If the text is expanded, collapse it
+                container.classList.remove("text-expanded");
+                button.innerHTML = "Show More";
+            } else {
+                // If the text is collapsed, expand it
+                container.classList.add("text-expanded");
+                button.innerHTML = "Show Less";
+            }
         }
     </script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
