--- a/pabutools/visualisation/templates/mes_round_analysis_template.html
+++ b/pabutools/visualisation/templates/mes_round_analysis_template.html
@@ -541,7 +541,7 @@
                     "pie_chart_triplets": [{% for pie_chart in round.pie_chart_triplet %}[{% for data in pie_chart%}{"project_name": "{{ projects[data.project]['name']|replace('\"', '\\\"')|replace("\'", "\\\'") }}","round_name": "{{ projects[round.id]['name']|replace('\"', '\\\"')|replace("\'", "\\\'") }}","title":  "'{{ projects[data.project]['name'].split()[:2] | join(" ") |replace('\"', '\\\"')|replace("\'", "\\\'")}}' Voters'","values_1": [{{ data.roundVoters }}],"text_1":  "'{{ projects[round.id]['name'].split()[:2] | join(" ") |replace('\"', '\\\"')|replace("\'", "\\\'") }}' Voters","values_2": [{{ data.nonRoundVoters }}] ,"text_2": "Non '{{ projects[round.id]['name'].split()[:2] | join(" ") |replace('\"', '\\\"')|replace("\'", "\\\'") }}' Voters", "reduction":{{data.reduction  | round(2) }} },{% endfor %}], {% endfor %}],
                     "sankey_chart": {"rows": [{% set data_items = round.voter_flow[round.id].items() | sort(attribute='1', reverse=True) %}{% set top_items = data_items[:6] %}{% set other_items = data_items[6:] %}{% set other_total = other_items | map(attribute='1') | sum %}{% for key, value in top_items %}{% if key != round.id %}['{{ projects[round.id]['name'].split()[:2] | join(" ") |replace('\"', '\\\"')|replace("\'", "\\\'") }}', '{{ projects[key]['name'].split()[:2] | join(" ") |replace('\"', '\\\"')|replace("\'", "\\\'") }}', {{ value }}],{% endif %}{% endfor %}{% if other_items %}['{{ projects[round.id]['name'].split()[:2] | join(" ") |replace('\"', '\\\"')|replace("\'", "\\\'") }}', 'Other', {{ other_total }}],{% endif %}]},
                     "chord_chart": {"series": [{% set project_name = projects[round.id]['name'].split()[:2] | join(" ")  %}{% set selected_project = round.name %}{% set project_votes = round.voter_flow[selected_project] | dictsort(by='value', reverse=True) %}{% set top_projects = project_votes[:6] | map(attribute=0) | list %}{% if selected_project not in top_projects %}    {% set top_projects = [selected_project] + top_projects %}{% endif %}{% for projFrom in top_projects %}    {        "values":[{% for projTo in top_projects %}{{ round.voter_flow[projFrom].get(projTo, 0) }},{% endfor %}{% if projFrom == selected_project %}{{ round.voter_flow[projFrom].get(projFrom, 0) }},{% endif %}],        "text": "{{ projects[projFrom]['name'].split()[:2] | join(" ") |replace('\"', '\\\"')|replace("\'", "\\\'") }}"    },{% endfor %}{% if selected_project not in top_projects %}{"values": [{% for projTo in top_projects %}{{ round.voter_flow[selected_project].get(projTo, 0) }},{% endfor %}{{ round.voter_flow[selected_project].get(selected_project, 0) }},],        "text": '{{ project_name }}'    },{% endif %}]},
-                    "intro": {"project_name": "{{ projects[round.id]['name']|replace('\"', '\\\"')|replace("\'", "\\\'") }}", "round_number": "{{loop.index0 + 1}}", "description": "{{projects[round.id]['description']|replace('\"', '\\\"')|replace("\'", "\\\'") }}", "project_cost" : "{{ "{:,}".format((projects[round.id]['cost'] | int)) }}", "budget_remaining" : "{{ "{:,}".format((round['remaining_budget'] | int)) }}", "effective_vote_count" : "{{ round['effective_vote_count'][round.id]}}", "project_votes" : "{{projects[round.id]['votes']}}" },
+                    "intro": {"project_name": "{{ projects[round.id]['name']|replace('\"', '\\\"')|replace("\'", "\\\'") }}", "round_number": "{{loop.index0 + 1}}", "description": "{{projects[round.id]['description']|replace('\"', '\\\"')|replace("\'", "\\\'") }}", "project_cost" : "{{ "{:,}".format((projects[round.id]['cost'] | int)) }}", "budget_remaining" : "{{ "{:,}".format((round['remaining_budget'] | int)) }}", "effective_vote_count" : "{{ '%0.2f' % round['effective_vote_count'][round.id] | float }}", "project_votes" : "{{projects[round.id]['votes']}}" },
                     "roundNum": {{loop.index0}},
                 },
             {% endfor %}}
@@ -606,6 +606,7 @@
                 }, ],
                 "plot": {
                 "tooltip": {
+                    "decimals": 2,
                     "text": "Project %scale-key-label has %v votes"
                 },
                     "animation": {
@@ -654,6 +655,7 @@
                     "marginRight":'dynamic'
                 },
                 "plot": {
+                    "decimals": 2,
                     "tooltip": {
                         "text": "Project %scale-key-label has %v votes"
                     },
@@ -859,7 +861,7 @@
                     col.appendChild(div);
                     let pieChartText = document.createElement("div");
                     pieChartText.className = "pie-chart-text";
-                    pieChartText.innerHTML = data.values_1 + " out of the " + (+data.values_1 + +data.values_2) + " voters who voted for '" + data.project_name + "' also voted for " + project_name + ". Resulting in an average reduction of $ per voter for the '" + data.project_name + "' voters who also voted for '" + data.round_name + "'.";
+                    pieChartText.innerHTML = data.values_1 + " out of the " + (+data.values_1 + +data.values_2) + " voters who voted for '" + data.project_name + "' also voted for " + project_name + ". Resulting in an average reduction of " + data.reduction +" {{ currency }} per voter for the '" + data.project_name + "' voters who also voted for '" + data.round_name + "'.";
                     col.appendChild(pieChartText);
                     row.appendChild(col);
                 });
