--- a/pabutools/visualisation/templates/greedy_round_analysis_template.html
+++ b/pabutools/visualisation/templates/greedy_round_analysis_template.html
@@ -18,6 +18,24 @@
             padding: 10px;
             box-sizing: border-box;
         }
+
+        .budget-chart-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            margin: 10px 0;
+        }
+
+        .chart-budget {
+            background: #fff;
+            border: 1.5px solid #000000;
+            width: 900px;
+            height: 45px;
+            display: flex;
+            align-items: center;
+        }
+
         .budget{
             color: black
         }
@@ -31,6 +49,20 @@
             justify-content: center;
             color: black;
         }
+
+        .bar-budget {
+            height: 100%;
+            background: #00A000;
+        }
+
+        .bar-border {
+            border: 0.75px solid #000000;
+        }
+
+        .bar-blue {
+            background: #83a8e6;
+        }
+
         .bar-inner {
             position: relative;
             height: 100%;
@@ -124,6 +156,7 @@
             width: 100%;
         }
         h1,
+        h2,
         h3,
         p {
             text-align: center;
@@ -184,8 +217,8 @@
                         <p>
                             This is the explanation for the outcome of the participatory budgeting election decided using the Greedy Utilitarian Welfare algorithm.<br>
                             Some of the key features of the election are: The election has a total budget of {{ "{:,}".format((budget | int)) }} {{ currency }} of which {{ "{:,}".format((spent | int)) }} {{ currency }} was spent. The election had a 
-                            total of {{total_votes}} voters. Note that each participant can vote for multiple projects. Therefore, the total votes for all projects may be 
-                            higher than {{total_votes}}<br>
+                            total of {{ "{:,}".format((total_votes | int)) }} voters. Note that each participant can vote for multiple projects. Therefore, the total votes for all projects may be 
+                            higher than {{ "{:,}".format((total_votes | int)) }}<br>
                             This page shows and explains the outcome of the election. The first graph shows the satisfaction scores for the projects and allows you to filter and examine the data in greater detail.
                             The bars show the budget at each stage of the election and the projects selected or rejected in each round. Finally, the final bar chart shows an overview of the selected and rejected projects.
                         </p>
@@ -193,7 +226,7 @@
                             To view the list of the projects selected, click this: <button type="button" id="electionOutcome" class="btn btn-secondary">View Election Outcome</button>
                             <div style="display: none;" id="outcomeList" class="row">
                                 {% for round in rounds %}
-                                    <p>Project: "{{ projects[round.selected_project.id]["name"] }}" with cost: {{ "{:,}".format( (round.selected_project.cost | int) ) }} {{ currency }} and had {{round.selected_project.votes}} votes.</p>
+                                    <p>Project: "{{ projects[round.selected_project.id]["name"] }}" with cost: {{ "{:,}".format( (round.selected_project.cost | int) ) }} {{ currency }} and had {{round.selected_project.votes | int }} votes.</p>
                                 {% endfor %}
                             </div>
                         </p>
@@ -203,8 +236,25 @@
             </div>
         </div>
         <div class="container">
+            <div class="spacer-1"></div>
+            <hr>
+            <div class="spacer-1"></div>
 
-            
+            <!-- Heading before table is displayed-->
+            <h3>Results</h3>
+            <p>The budget of {{ "{:,}".format((budget | int)) }} {{ currency }} was allocated across {{ rounds|length }} projects:<br>
+               Hover your mouse cursor over the bars to identify each project that got selected and how much was removed from the overall budget.</p>
+            <div class='budget-chart-container'>
+                <div class="center"><span><b>Budget allocation across selected projects.</b></span></div>
+                <div class='chart-budget'>
+                    {% for round in rounds %}
+                        <div class='bar-budget bar-blue bar-border'
+                            style='width: {{ (round.selected_project.cost / budget | float) * 100 }}&#37;;'
+                            data-tippy-content="Project {{ round.selected_project.id }}: <q>{{ projects[round.selected_project.id]['name'] }}</q> was voted in round {{ loop.index }}, costing {{ '{:,}'.format( (round.selected_project.cost | int) ) }} {{ currency }}. This is {{ ((round.selected_project.cost / budget | int) * 100) | int }}&#37; of the budget.">
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
             
             <div class="spacer-1"></div>
             <hr>
