Fix rejected projects cost not displaying correctly in greedy page.
The rejected projects within the round analysis page of the greedy page was using the selected project as opposed to the rejected project cost.

--- a/pabutools/visualisation/templates/greedy_round_analysis_template.html
+++ b/pabutools/visualisation/templates/greedy_round_analysis_template.html
@@ -378,7 +378,7 @@
                                                     <div class="bar red text-outside-bar" style="width: {{ (proj.cost / round.max_cost) * 90 }}%;">
                                                     </div>
                                                     <div class="rejected-mark">✘</div>
-                                                    <div><p style="position:absolute; top: 12px;">&nbsp; {{ proj.id }}: {{ projects[proj.id]["name"][:45] }} - {{ "{:,}".format( (round.selected_project.cost | int) ) }} {{ currency }}</p></div>
+                                                    <div><p style="position:absolute; top: 12px;">&nbsp; {{ proj.id }}: {{ projects[proj.id]["name"][:45] }} - {{ "{:,}".format( (proj.cost | int) ) }} {{ currency }}</p></div>
                                                 </div>
                                         </div>
                                         {% endfor %}
